--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
             "cert": "C:\\Users\\kemora_13conf\\Desktop\\Licence-Pro\\Geolocalisation\\Projet-tutore\\server.crt",
             "key": "C:\\Users\\kemora_13conf\\Desktop\\Licence-Pro\\Geolocalisation\\Projet-tutore\\server.key",
             "passphrase": "12345"  
-        }  
+        },
+        "editor.formatOnSave": true
 }
